# frameless_window_qt

./: CMakeLists.txt  LICENSE  README.md  caption_bar.cpp  caption_bar.h  conanfile.py  configure_conan.cmake  configure_linux_default.sh  configure_windows_default.bat  frameless_window.hpp  frameless_window_linux.hpp  frameless_window_windows.cpp  frameless_window_windows.hpp  iframeless_window_native.hpp  main.cpp  main_window.cpp  main_window.h
caption_bar/: caption_bar.cpp  caption_bar.h  icaption_bar.h
conan/: conan_profile_linux.txt  conan_profile_linux_debug.txt  conan_profile_linux_release.txt  conan_profile_windows_debug.txt  conan_profile_windows_release.txt
frameless_window/: frameless_window.hpp  frameless_window_linux.cpp  frameless_window_windows.cpp  frameless_window_windows.hpp  iframeless_window_native.hpp
resources/: stylesheet.qss
ui/: caption_bar.ui  main_window.ui
